--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,23 @@
-on: push
 name: Deploy website on push
+
+on:
+  push:
+    branches:
+      - prod-v2 # Remplace ceci par le nom de ta branche si différent
+
 jobs:
- web-deploy:
- name: Deploy
- runs-on: ubuntu-latest
- steps:
- - name: Get latest code
- uses: actions/checkout@v2
- 
- - name: Sync files
- uses: SamKirkland/FTP-Deploy-Action@4.3.0
- with:
- server: 51.75.26.163
- server-dir: /var/www/html/
- username: debian
- password: ${{ secrets.ftp_password }}
+  web-deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Get latest code
+      uses: actions/checkout@v2
+      
+    - name: Sync files
+      uses: SamKirkland/FTP-Deploy-Action@4.3.0
+      with:
+        server: 51.75.26.163
+        server-dir: /var/www/html/
+        username: debian
+        password: ${{ secrets.FTP_PASSWORD }}
