--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy website on push
 on:
   push:
     branches:
-      - prod-v2 # Remplace ceci par le nom de ta branche si différent
+      - prod-v2
 
 jobs:
   web-deploy:
